objects/ssot__ContractDocVerContentDoc__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContentDocumentId__c</fullName>
        <label>Content Document</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentVersionNumber__c</fullName>
        <label>Content Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractDocumentVersionId__c</fullName>
        <label>Contract Document Version</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DocumentSourceType__c</fullName>
        <label>Document Source Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroupContractDocVerContentDocId__c</fullName>
        <label>Group Contract Doc Version Content Doc</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Contract Doc Version Content Doc Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsGeneratedDocCheckedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Generated Document Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732852998682_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractDocVerContentDoc_CreatedById_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContractDocVerContentDoc_CreatedById_rel</relationshipLabel>
        <relationshipName>rel_1732852998682_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732853004383_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractDocVerContentDoc_LastModifie_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContractDocVerContentDoc_LastModifie_rel</relationshipLabel>
        <relationshipName>rel_1732853004383_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732853347275_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractDocVerContentDoc_GroupContra_rel</label>
        <referenceTo>ssot__ContractDocVerContentDoc__dlm</referenceTo>
        <relationshipLabel>ContractDocVerContentDoc_GroupContra_rel</relationshipLabel>
        <relationshipName>rel_1732853347275_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>